src/test/deca/context/invalid/self/champs.deca
{
    int a;
    a.x = 1;
}